Proportional Editing: 'Connected Only' option can cause distortions depending on topology #78752

Closed
opened 2020-07-09 03:32:54 +02:00 by Diogo Valadares Reis dos Santos · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: AMD Radeon RX 5700 XT ATI Technologies Inc. 4.5.13587 Core Profile Context 20.4.2 26.20.15029.27017

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-04 15:31, hash: 464aaf2701
Worked: -

Short description of error
when using "connected only" depending of the topology of the mesh you get weird "lines" on the surface

Exact steps for others to reproduce the error

  • create a plane and subdivide it
  • in edit mode, grab the middle vertice and pull it up using proportional editing. You will notice that you get different results if "connected only" if active or not.
    image.png
    In the left you can see that its smooth while in the right its has this piramid shape

The same test but with the mesh triangulated
image.png

I don't know if this is intended but I think "connected only" was supposed to only make other meshs not get afected with the "proportional editing" and not change how it works in the mesh you want to edit.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: AMD Radeon RX 5700 XT ATI Technologies Inc. 4.5.13587 Core Profile Context 20.4.2 26.20.15029.27017 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-04 15:31, hash: `464aaf2701` Worked: - **Short description of error** when using "connected only" depending of the topology of the mesh you get weird "lines" on the surface **Exact steps for others to reproduce the error** - create a plane and subdivide it - in edit mode, grab the middle vertice and pull it up using proportional editing. You will notice that you get different results if "connected only" if active or not. ![image.png](https://archive.blender.org/developer/F8679550/image.png) In the left you can see that its smooth while in the right its has this piramid shape The same test but with the mesh triangulated ![image.png](https://archive.blender.org/developer/F8679554/image.png) I don't know if this is intended but I think "connected only" was supposed to only make other meshs not get afected with the "proportional editing" and not change how it works in the mesh you want to edit.

Added subscriber: @Diogo_Valadares

Added subscriber: @Diogo_Valadares
Member

Added subscribers: @brecht, @lichtwerk

Added subscribers: @brecht, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

This has been reported before, see #43393 (proportional editing issue with "connected" mode), #53602 (Mesh - Proportional Editing (Connected) Bug), #35590 (Connected proportional editing gives unexpected results )

There was even a patch for this, see D2345: Proportional Editing Octangler Distortion, quoting @brecht from there:

In D2345#54454, @brecht wrote:
But the real problem is that the way this distance is computed is not exact and influenced too much by the particular topology, and that's what should be fixed. In general the correct solution would be to use Geodesic distances (there are [many ]] https:*www.cs.cmu.edu/~kmcrane/Projects/GeodesicsInHeat/ [ http://i.cs.hku.hk/~xghan/Projects/VTP.htm | papers about this that tend to be quite complex), or there may be some simpler heuristics than work well enough to get a smoother distance here.

So while this has been turned down previously as not a bug, I see this as a Known Issue now [it is not really against blenders design - but it is uncertain if a dev will work on this anytime soon]

This has been reported before, see #43393 (proportional editing issue with "connected" mode), #53602 (Mesh - Proportional Editing (Connected) Bug), #35590 (Connected proportional editing gives unexpected results ) There was even a patch for this, see [D2345: Proportional Editing Octangler Distortion](https://archive.blender.org/developer/D2345), quoting @brecht from there: > In [D2345](https://archive.blender.org/developer/D2345)#54454, @brecht wrote: > But the real problem is that the way this distance is computed is not exact and influenced too much by the particular topology, and that's what should be fixed. In general the correct solution would be to use Geodesic distances (there are [many ]] [[ https:*www.cs.cmu.edu/~kmcrane/Projects/GeodesicsInHeat/ | research ]] [[ http://i.cs.hku.hk/~xghan/Projects/VTP.htm | papers ](http:*hhoppe.com/proj/geodesics/) about this that tend to be quite complex), or there may be some simpler heuristics than work well enough to get a smoother distance here. So while this has been turned down previously as not a bug, I see this as a `Known Issue` now [it is not really against blenders design - but it is uncertain if a dev will work on this anytime soon]
Philipp Oeser changed title from Connected only proportional editing bug to Proportional Editing: 'Connected Only' option can cause distortions depending on topology 2020-07-09 13:02:55 +02:00
Member

Added subscriber: @PabloDobarro

Added subscriber: @PabloDobarro
Member

This is the same issues this patch D7059 has, and this is why it is still not merged. I investigated this for a while and I'm still not sure if this is something that can be computed in real time for any type of mesh. I guess the algorithm can be improved, but I would not expect this to be artifact free.

This is the same issues this patch [D7059](https://archive.blender.org/developer/D7059) has, and this is why it is still not merged. I investigated this for a while and I'm still not sure if this is something that can be computed in real time for any type of mesh. I guess the algorithm can be improved, but I would not expect this to be artifact free.

This issue was referenced by 21b9231d7f

This issue was referenced by 21b9231d7f5a248027c32dcc7daab3318390c20f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-01-13 18:25:09 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78752
No description provided.